# yt-parallel

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.Docker.md  compose.yaml  get_version_from_toml.py  get_version_from_toml.sh  readme.md  yt-parallel-bash.sh
deploy/docker/: Dockerfile  Dockerfile_arm
src/: logging.rs  main.rs  tests.rs
