[package]
name = "yt-parallel"
version = "0.5.26"
edition = "2021"
authors = ["Philip Rodrigues<phil@phiroict.co.nz>"]
license = "GPL-2.0-or-later"
repository ="https://github.com/phiroict/yt-parallel"
description = "This application runs download tools (default is yt-dlp) in parallel to download batches of videos."
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
which = { version = "6.0.1", features = [] }
env_logger = "0.11.3"
log = "0.4.21"
uuid = { version = "1.8.0", features = ["v4"]  }
fs_extra = "1.3.0"
