[package]
name = "yt-parallel"
version = "0.6.1"
edition = "2024"
authors = ["Philip Rodrigues<phil@phiroict.co.nz>"]
license = "GPL-2.0-or-later"
repository ="https://github.com/phiroict/yt-parallel"
description = "This application runs download tools (default is yt-dlp) in parallel to download batches of videos."
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
which = { version = "7.0.3", features = [] }
env_logger = "0.11.8"
log = "0.4.27"
uuid = { version = "1.17.0", features = ["v4"]  }
fs_extra = "1.3.0"
