[package]
name = "yt-parallel"
version = "1.0.0"
edition = "2024"
authors = ["Philip Rodrigues<phil@phiroict.co.nz>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/phiroict/yt-parallel"
description = "This application runs download tools (default is yt-dlp) in parallel to download batches of videos."
readme = "readme.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
which = { version = "8.0.4", features = [] }
env_logger = "0.11.11"
log = "0.4.33"
uuid = { version = "1.23.4", features = ["v4"] }
fs_extra = "1.3.0"
